--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,15 @@
 
     <EditText
         android:id="@+id/edit_query"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Put your query here"/>
-
-    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:hint="Put your query here"
+        android:layout_margin="16dp"/>
 
-        <TextView
-            android:id="@+id/text_all_recipes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:padding="16dp"
-            tools:text="All Recipes"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_recipes"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-    </ScrollView>
 </LinearLayout>
